--- a/.env.dev
+++ b/.env.dev
@@ -2,10 +2,10 @@ PORT=8080
 
 # Database | To see logs set DATABASE_LOG to ON
 DATABASE_LOG="OFF"
-DATABASE_URL="postgresql://admin:admin@localhost:5432/nutri?schema=public"
+DATABASE_URL="postgresql://admin:admin@localhost:5432/nutritionist?schema=public"
 POSTGRES_USER="admin"
 POSTGRES_PASSWORD="admin"
-POSTGRES_DB="nutri"
+POSTGRES_DB="nutritionist"
 
 # API key
 API_KEY=""
